Enhance Booking and implement Add user with roles.

--- a/src/main/resources/templates/booking/create.html
+++ b/src/main/resources/templates/booking/create.html
@@ -16,7 +16,7 @@
                 </ol>
                 <form method="post" th:action="@{/bookings}">
                     <div class="modal-header">
-                        <h4 class="modal-title">Create Booking</h4>
+                        <h4 class="modal-title">Add Booking</h4>
                     </div>
                     <div class="modal-body">
                         <input name="guest.id" th:value="${param.guestId}" type="hidden">
