--- a/src/main/resources/templates/booking/edit.html
+++ b/src/main/resources/templates/booking/edit.html
@@ -27,7 +27,7 @@
                 <!--                </div>-->
                 <form method="post" th:action="@{/bookings}">
                     <div class="modal-header">
-                        <h4 class="modal-title">Edit Booking Information</h4>
+                        <h4 class="modal-title">Edit Booking</h4>
                     </div>
                     <div class="modal-body">
                         <!--                        <input name="guest.id" th:value="${guest.id}" type="hidden">-->
