--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -8,60 +8,57 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid">
-                <h1 class="mt-4">Rooms</h1>
+                <h1 class="mt-4">Users</h1>
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item"><a th:href="${'/'}">Home</a></li>
-                    <li class="breadcrumb-item"><a th:href="${'/rooms'}">Rooms</a></li>
+                    <li class="breadcrumb-item"><a th:href="${'/users'}">Users</a></li>
                     <li class="breadcrumb-item active">Edit</li>
                 </ol>
-                <form method="post" th:action="@{/guests}">
+                <form method="post" th:action="@{/users}">
                     <div class="modal-header">
-                        <h4 class="modal-title">Add Guest</h4>
+                        <h4 class="modal-title">Edit User</h4>
                     </div>
                     <div class="modal-body">
-                        <input name="id" th:value="${guest.id}" type="hidden">
+                        <input name="username" th:value="${user.username}" type="hidden">
                         <div class="form-group">
-                            <label>First Name</label>
-                            <input class="form-control" name="firstName" th:value="${guest.firstName}" type="text">
-                        </div>
-                        <div class="form-group">
-                            <label>Last Name</label>
-                            <input class="form-control" name="lastName" th:value="${guest.lastName}" type="text">
+                            <label>Full Name</label>
+                            <input class="form-control" name="name" th:value="${user.name}" type="text">
                         </div>
                         <div class="form-group">
                             <label>Gender</label>
                             <select class="form-control" id="gender" name="gender">
                                 <option th:each="gender : ${genders}"
-                                        th:text="${gender}" th:value="${gender}">
+                                        th:selected="${gender.equals(user.gender)}" th:text="${gender}"
+                                        th:value="${gender}">
                                 </option>
                             </select>
                         </div>
                         <div class="form-group">
                             <label>Phone Number</label>
-                            <input class="form-control" name="phoneNumber" th:value="${guest.phoneNumber}" type="text">
+                            <input class="form-control" name="phoneNumber" th:value="${user.phoneNumber}" type="text">
                         </div>
                         <div class="form-group">
                             <label>DOB</label>
-                            <input class="form-control" name="dob" th:value="${guest.dob}" type="date">
+                            <input class="form-control" name="dob" th:value="${user.dob}" type="date">
                         </div>
                         <div class="form-group">
                             <label>Street</label>
-                            <input class="form-control" name="address.street" th:value="${guest.address.street}"
+                            <input class="form-control" name="address.street" th:value="${user.address?.street}"
                                    type="text">
                         </div>
                         <div class="form-group">
                             <label>City</label>
-                            <input class="form-control" name="address.city" th:value="${guest.address.city}"
+                            <input class="form-control" name="address.city" th:value="${user.address?.city}"
                                    type="text">
                         </div>
                         <div class="form-group">
                             <label>State</label>
-                            <input class="form-control" name="address.state" th:value="${guest.address.state}"
+                            <input class="form-control" name="address.state" th:value="${user.address?.state}"
                                    type="text">
                         </div>
                         <div class="form-group">
                             <label>Zip Code</label>
-                            <input class="form-control" name="address.zip" th:value="${guest.address.zip}" type="text">
+                            <input class="form-control" name="address.zip" th:value="${user.address?.zip}" type="text">
                         </div>
                     </div>
                     <div class="modal-footer">
