--- a/src/main/resources/templates/booking/detail/view.html
+++ b/src/main/resources/templates/booking/detail/view.html
@@ -12,43 +12,39 @@
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item"><a th:href="${'/'}">Home</a></li>
                     <li class="breadcrumb-item"><a th:href="${'/bookings'}">Bookings</a></li>
-                    <li class="breadcrumb-item active">Add Detail</li>
+                    <li class="breadcrumb-item active">View Detail</li>
                 </ol>
-                <form method="post" th:action="@{/bookings}">
-                    <div class="modal-header">
-                        <h4 class="modal-title">Create Booking Detail</h4>
+                <div class="modal-header">
+                    <h4 class="modal-title">View Booking Detail</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label>Booking No.</label>
+                        <input class="form-control" disabled name="bookingNo" type="text">
                     </div>
-                    <div class="modal-body">
-                        <div class="form-group">
-                            <label>Booking No.</label>
-                            <input class="form-control" disabled name="bookingNo" type="text">
-                        </div>
-                        <div class="form-group">
-                            <label>Choose Type</label>
-                            <select class="form-control" id="type" name="type">
-                                <option th:each="type : ${types}"
-                                        th:text="${type}" th:value="${type}">
-                                </option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label>Choose Room</label>
-                            <select class="form-control" id="roomId" name="roomId">
-                                <option th:each="room : ${availableRooms}"
-                                        th:text="${room.roomNo}" th:value="${room.id}">
-                                </option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label>Notes</label>
-                            <textarea class="form-control" name="notes"></textarea>
-                        </div>
+                    <div class="form-group">
+                        <label>Choose Type</label>
+                        <select class="form-control" disabled id="type" name="type">
+                            <option th:each="type : ${types}"
+                                    th:selected="${type.equals(detail.type)}" th:text="${type}" th:value="${type}">
+                            </option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label>Choose Room</label>
+                        <select class="form-control" disabled id="roomId" name="roomId">
+                            <option th:each="room : ${availableRooms}"
+                                    th:selected="${room.id == detail.room.id}" th:text="${room.roomNo}"
+                                    th:value="${room.id}">
+                            </option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label>Notes</label>
+                        <textarea class="form-control" disabled name="notes"></textarea>
+                    </div>
 
-                    </div>
-                    <div class="modal-footer">
-                        <input class="btn btn-success" type="submit" value="Save">
-                    </div>
-                </form>
+                </div>
             </div>
         </main>
         <th:block th:insert="fragments/footer :: footer"></th:block>
