--- a/src/main/resources/templates/fragments/sidenav.html
+++ b/src/main/resources/templates/fragments/sidenav.html
@@ -1,13 +1,9 @@
 <div id="layoutSidenav_nav" th:fragment="sidenav"
+     xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
      xmlns:th="http://www.thymeleaf.org">
     <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
         <div class="sb-sidenav-menu">
             <div class="nav">
-                <!--                <div class="sb-sidenav-menu-heading">Core</div>-->
-                <!--                <a class="nav-link" th:href="${'/dashboard'}">-->
-                <!--                    <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>-->
-                <!--                    Dashboard-->
-                <!--                </a>-->
                 <a aria-controls="guestLayouts" aria-expanded="false" class="nav-link collapsed"
                    data-target="#guestLayouts"
                    data-toggle="collapse" href="#">
@@ -52,11 +48,24 @@
                         <a class="nav-link" th:href="${'/bookings/view/checkout'}">Checkout</a>
                     </nav>
                 </div>
+                <a aria-controls="userPages" aria-expanded="false" class="nav-link collapsed" data-target="#userPages"
+                   data-toggle="collapse"
+                   href="#" sec:authorize="hasAuthority('ADMIN')">
+                    <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                    User Management
+                    <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                </a>
+                <div aria-labelledby="headingTwo" data-parent="#sidenavAccordion" id="userPages"
+                     sec:authorize="hasAuthority('ADMIN')">
+                    <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
+                        <a class="nav-link" th:href="${'/users'}">Users</a>
+                    </nav>
+                </div>
             </div>
         </div>
         <div class="sb-sidenav-footer">
-            <div class="small">Logged in as:</div>
-            Start Bootstrap
+            <div class="small" sec:authorize="isAuthenticated()">Logged in as:</div>
+            <span sec:authentication="principal.username"></span>
         </div>
     </nav>
 </div>
