--- a/src/main/resources/templates/guest/create.html
+++ b/src/main/resources/templates/guest/create.html
@@ -8,7 +8,7 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid">
-                <h1 class="mt-4"></h1>
+                <h1 class="mt-4">Guests</h1>
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item"><a th:href="${'/'}">Home</a></li>
                     <li class="breadcrumb-item"><a th:href="${'/guests'}">Guests</a></li>
