--- a/src/main/resources/templates/guest/edit.html
+++ b/src/main/resources/templates/guest/edit.html
@@ -8,7 +8,7 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid">
-                <h1 class="mt-4">Rooms</h1>
+                <h1 class="mt-4">Guests</h1>
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item"><a th:href="${'/'}">Home</a></li>
                     <li class="breadcrumb-item"><a th:href="${'/rooms'}">Rooms</a></li>
@@ -16,7 +16,7 @@
                 </ol>
                 <form method="post" th:action="@{/guests}">
                     <div class="modal-header">
-                        <h4 class="modal-title">Add Guest</h4>
+                        <h4 class="modal-title">Edit Guest</h4>
                     </div>
                     <div class="modal-body">
                         <input name="id" th:value="${guest.id}" type="hidden">
@@ -32,7 +32,8 @@
                             <label>Gender</label>
                             <select class="form-control" id="gender" name="gender">
                                 <option th:each="gender : ${genders}"
-                                        th:text="${gender}" th:value="${gender}">
+                                        th:selected="${gender.equals(guest.gender)}" th:text="${gender}"
+                                        th:value="${gender}">
                                 </option>
                             </select>
                         </div>
@@ -42,7 +43,7 @@
                         </div>
                         <div class="form-group">
                             <label>DOB</label>
-                            <input class="form-control" name="dob" th:value="${guest.dob}" type="date">
+                            <input class="form-control" name="dob" th:text="${guest.dob}" type="date">
                         </div>
                         <div class="form-group">
                             <label>Street</label>
