--- a/src/main/resources/templates/room/list.html
+++ b/src/main/resources/templates/room/list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns:th="http://www.thymeleaf.org">
 <th:block th:insert="fragments/head_crud"></th:block>
 <body class="sb-nav-fixed">
 <th:block th:insert="fragments/navbar :: navbar"></th:block>
@@ -8,12 +8,12 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid">
-                <h1 class="mt-4">Rooms</h1>
+                <h1 class="mt-4" th:text="${title}"></h1>
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item"><a th:href="${'/'}">Home</a></li>
                     <li class="breadcrumb-item active">Rooms</li>
                 </ol>
-                <div class="table-title">
+                <div class="table-title" sec:authorize="hasAuthority('STAFF')">
                     <div class="row">
                         <div class="col-sm-9">
                             <h2></h2>
@@ -36,7 +36,7 @@
                                     <th>Capacity</th>
                                     <th>Type</th>
                                     <th>Price</th>
-                                    <th>Status</th>
+                                    <th th:if="${showAll}">Status</th>
                                     <th>Actions</th>
                                 </tr>
                                 </thead>
@@ -47,7 +47,7 @@
                                     <th>Capacity</th>
                                     <th>Type</th>
                                     <th>Price</th>
-                                    <th>Status</th>
+                                    <th th:if="${showAll}">Status</th>
                                     <th>Actions</th>
                                 </tr>
                                 </tfoot>
@@ -58,12 +58,17 @@
                                     <td th:text="${room.capacity}">System Architect</td>
                                     <td th:text="${room.roomType}">Edinburgh</td>
                                     <td th:text="${room.price}">61</td>
-                                    <td th:text="${room.status}">61</td>
+                                    <td th:if="${showAll}" th:text="${room.status}">61</td>
                                     <td>
-                                        <a class="edit" th:href="@{/rooms/edit/{id}(id=${room.id})}">
+                                        <a class="edit" th:href="@{/rooms/view/{id}(id=${room.id})}">
+                                            <i class="material-icons" data-toggle="tooltip"
+                                               title="View">visibility</i></a>
+                                        <a class="edit" sec:authorize="hasAuthority('STAFF')"
+                                           th:href="@{/rooms/edit/{id}(id=${room.id})}">
                                             <i class="material-icons" data-toggle="tooltip"
                                                title="Edit">&#xE254;</i></a>
-                                        <a class="delete" th:href="@{/rooms/delete/{id}(id=${room.id})}">
+                                        <a class="delete" sec:authorize="hasAuthority('STAFF')"
+                                           th:href="@{/rooms/delete/{id}(id=${room.id})}">
                                             <i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
                                     </td>
                                 </tr>
