--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns:th="http://www.thymeleaf.org">
 <th:block th:insert="fragments/head_crud"></th:block>
 <body class="sb-nav-fixed">
 <th:block th:insert="fragments/navbar :: navbar"></th:block>
@@ -8,32 +8,31 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid">
-                <h1 class="mt-4">Guest</h1>
+                <h1 class="mt-4">Users</h1>
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item"><a th:href="${'/'}">Home</a></li>
                     <li class="breadcrumb-item active">Users</li>
                 </ol>
-
+                <div class="table-title" sec:authorize="hasAuthority('ADMIN')">
+                    <div class="row">
+                        <div class="col-sm-9">
+                            <h2></h2>
+                        </div>
+                        <div class="col-sm-3">
+                            <a class="btn btn-success" th:href="@{/users/create}"><i class="material-icons">&#xE147;</i>
+                                <span>Add User</span></a>
+                        </div>
+                    </div>
+                </div>
                 <div class="card mb-4">
                     <div class="card-body">
                         <div class="table-responsive">
-                            <div class="table-title">
-                                <div class="row">
-                                    <div class="col-sm-9">
-                                        <h2></h2>
-                                    </div>
-                                    <div class="col-sm-3">
-                                        <a class="btn btn-success" th:href="@{/users/create}"><i
-                                                class="material-icons">&#xE147;</i>
-                                            <span>Add User</span></a>
-                                    </div>
-                                </div>
-                            </div>
                             <table cellspacing="0" class="table table-bordered" id="dataTable"
                                    th:if="${not #lists.isEmpty(users)}" width="100%">
                                 <thead>
                                 <tr>
                                     <th>Full Name</th>
+                                    <th>Username</th>
                                     <th>Gender</th>
                                     <th>Phone Number</th>
                                     <th>DOB</th>
@@ -44,6 +43,7 @@
                                 <tfoot>
                                 <tr>
                                     <th>Full Name</th>
+                                    <th>Username</th>
                                     <th>Gender</th>
                                     <th>Phone Number</th>
                                     <th>DOB</th>
@@ -52,20 +52,20 @@
                                 </tr>
                                 </tfoot>
                                 <tbody>
-                                <tr th:each="guest : ${guests}">
-                                    <td th:text="${guest.fullName}">Tiger Nixon</td>
-                                    <td th:text="${guest.gender}">System Architect</td>
-                                    <td th:text="${guest.phoneNumber}">Edinburgh</td>
-                                    <td th:text="${guest.dob}">61</td>
-                                    <td th:text="${guest.address.address}">61</td>
+                                <tr th:each="user : ${users}">
+                                    <td th:text="${user.name}">Tiger Nixon</td>
+                                    <td th:text="${user.username}">System Architect</td>
+                                    <td th:text="${user.gender}">Edinburgh</td>
+                                    <td th:text="${user.phoneNumber}">Edinburgh</td>
+                                    <td th:text="${user.dob}">Edinburgh</td>
+                                    <td th:text="${user.address?.address}">61</td>
                                     <td>
-                                        <a class="edit" th:href="@{/bookings?guestId={id}(id=${guest.id})}">
+                                        <a class="edit" sec:authorize="hasAuthority('ADMIN')"
+                                           th:href="@{/users/edit/{username}(username=${user.username})}">
                                             <i class="material-icons" data-toggle="tooltip"
                                                title="Edit">&#xE254;</i></a>
-                                        <a class="edit" th:href="@{/guests/edit/{id}(id=${guest.id})}">
-                                            <i class="material-icons" data-toggle="tooltip"
-                                               title="Edit">&#xE254;</i></a>
-                                        <a class="delete" th:href="@{/guests/delete/{id}(id=${guest.id})}">
+                                        <a class="delete" sec:authorize="hasAuthority('ADMIN')"
+                                           th:href="@{/users/delete/{username}(username=${user.username})}">
                                             <i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
                                     </td>
                                 </tr>
