--- a/src/main/resources/templates/guest/edit.html
+++ b/src/main/resources/templates/guest/edit.html
@@ -43,7 +43,7 @@
                         </div>
                         <div class="form-group">
                             <label>DOB</label>
-                            <input class="form-control" name="dob" th:text="${guest.dob}" type="date">
+                            <input class="form-control" name="dob" th:field="*{guest.dob}" type="date">
                         </div>
                         <div class="form-group">
                             <label>Street</label>
