--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,7 +1,7 @@
 <div th:fragment="navbar"
      xmlns:th="http://www.thymeleaf.org">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">Hotel Management System</a>
+        <a class="navbar-brand" href="/">Hotel Management</a>
         <button class="btn btn-link btn-sm order-1 order-lg-0" href="#" id="sidebarToggle"><i class="fas fa-bars"></i>
         </button>
         <!-- Navbar Search-->
